# VedikaBrowser

./: .gitignore  AppQRC.qrc  CMakeLists.txt  KNOWN_ISSUES.md  LICENSE  README.md  app_res.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
lib/resources/styles/: main.qss
lib/resources/webpages/: startup_light.html
lib/ui/WebAreaLayoutWidget/: webarealayoutwidget.cpp  webarealayoutwidget.h  webarealayoutwidget.ui
lib/ui/WebAreaLayoutWidget/WebAreaLayoutManager/: webarealayoutmanager.cpp  webarealayoutmanager.h  webarealayoutmanager.ui
lib/ui/WebAreaLayoutWidget/WebAreaLayoutManager/TabSelectionDialog/: tabselectiondialog.cpp  tabselectiondialog.h  tabselectiondialog.ui
lib/ui/WebAreaLayoutWidget/WebEngineView/: webengineview.cpp  webengineview.h
lib/ui/WebEngineView/: webengineview.cpp  webengineview.h  webengineview.ui
lib/ui/navigationbar/: navigationbar.cpp  navigationbar.h  navigationbar.ui
lib/ui/navigationbar/NavigationButtonGroup/: navigationbuttongroup.cpp  navigationbuttongroup.h  navigationbuttongroup.ui
lib/ui/navigationbar/WebAreaLayoutController/: webarealayoutcontroller.cpp  webarealayoutcontroller.h  webarealayoutcontroller.ui
lib/ui/navigationbar/searchbar/: searchbar.cpp  searchbar.h  searchbar.ui
lib/ui/tabbar/: tabbar.cpp  tabbar.h  tabbar.ui
lib/ui/tabbar/tabitem/: tabitem.cpp  tabitem.h  tabitem.ui
